--- a/index.html
+++ b/index.html
@@ -11,23 +11,31 @@
             background-color: #061110;
             margin: 0;
             padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
         }
         img {
-            display: block;
-            margin: 0 auto;
             max-width: 100%;
-            height: auto;
+            max-height: 100%;
         }
         @media (min-width: 768px) {
             img {
                 content: url('comingsoon_desktop.png');
-                max-width: 50%;
+                max-width: 100%;
+                max-height: 100%;
+                width: 1920px;
+                height: 1080px;
             }
         }
         @media (max-width: 767px) {
             img {
                 content: url('comingsoon_mobile.png');
-                max-width: 80%;
+                max-width: 100%;
+                max-height: 100%;
+                width: 720px;
+                height: 1080px;
             }
         }
     </style>
