--- a/index.html
+++ b/index.html
@@ -1,57 +1,45 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="animation, content, nuts ideas">
-    <meta name="description" content="Nuts Ideas - Official Website - Animation, Content & More">
-    <title>Nuts Ideas - Coming Soon</title>
+    <meta name="description" content="Nuts Ideas - animation and contents factory in Barcelona">
+    <meta name="keywords" content="animation, content, croco doc, ice cops, diseducation TV">
+    <title>Coming Soon - Nuts Ideas</title>
     <style>
         body {
-            background-color: #061110;
             margin: 0;
             padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
+            background-color: #061110;
+            text-align: center;
         }
-        .image-container {
+
+        img {
             max-width: 100%;
-            max-height: 100%;
-            position: relative;
+            height: auto;
         }
-        .image-container img {
-            max-width: 100%;
-            max-height: 100%;
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-        }
-        @media (min-width: 768px) {
-            .image-container img {
-                content: url('comingsoon_desktop.png');
+
+        @media screen and (min-width: 768px) {
+            /* desktop */
+            img {
                 width: 100%;
+                max-width: none;
                 height: auto;
-                max-width: 1920px;
-                max-height: 1080px;
             }
         }
-        @media (max-width: 767px) {
-            .image-container img {
-                content: url('comingsoon_mobile.png');
+
+        @media screen and (max-width: 767px) {
+            /* mobile */
+            img {
                 width: 100%;
+                max-width: none;
                 height: auto;
-                max-width: 720px;
-                max-height: 1080px;
             }
         }
     </style>
 </head>
 <body>
-    <div class="image-container">
-        <img src="comingsoon_desktop.png" alt="Coming Soon" />
-    </div>
+    <img src="comingsoon_desktop.png" alt="Coming Soon" class="desktop">
+    <img src="comingsoon_mobile.png" alt="Coming Soon" class="mobile">
 </body>
 </html>
