--- a/index.html
+++ b/index.html
@@ -5,41 +5,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Nuts Ideas - animation and contents factory in Barcelona">
     <meta name="keywords" content="animation, content, croco doc, ice cops, diseducation TV">
-    <title>Coming Soon - Nuts Ideas</title>
+    <title>Coming Soon</title>
     <style>
         body {
+            background-color: #061110;
             margin: 0;
             padding: 0;
-            background-color: #061110;
-            text-align: center;
         }
-
         img {
+            display: block;
+            margin: auto;
             max-width: 100%;
-            height: auto;
         }
-
-        @media screen and (min-width: 768px) {
-            /* desktop */
+        @media only screen and (max-width: 768px) {
+            /* Styles for mobile devices */
             img {
-                width: 100%;
-                max-width: none;
+                content: url('comingsoon_mobile.png');
                 height: auto;
+                width: 100%;
             }
         }
-
-        @media screen and (max-width: 767px) {
-            /* mobile */
+        @media only screen and (min-width: 769px) {
+            /* Styles for desktop devices */
             img {
-                width: 100%;
-                max-width: none;
+                content: url('comingsoon_desktop.png');
                 height: auto;
+                width: 100%;
             }
         }
     </style>
 </head>
 <body>
-    <img src="comingsoon_desktop.png" alt="Coming Soon" class="desktop">
-    <img src="comingsoon_mobile.png" alt="Coming Soon" class="mobile">
+    <img src="comingsoon_desktop.png" alt="Coming Soon">
 </body>
 </html>
